--- a/jinkal1.html
+++ b/jinkal1.html
@@ -6,7 +6,7 @@
 <body>
 <div class="absolute">
 	<header>
-		<h1 style="text-align:center;">Sample Webpage</h1>
+		<h1 style="text-align:center;">Sample Webpage 1</h1>
 	</header>
 	<article><h2>My Hobbies are:</h2>
 <ul class="webpage">
